# usecase

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  showcase.csv  showcasedemo_aggregated.csv  showcases.csv.bak  tox.ini
apache2/: usecase.conf
install/: install.conf  install.sh  usecasedb.sql
usecase/api/: __init__.py  admin_api.py  api.py  auth_handler.py  exception_handler.py
usecase/db/: database.py  models.py  user.py
usecase/db/migration/: alembic.ini  cli.py
usecase/db/migration/alembic_migrations/: env.py
usecase/db/migration/alembic_migrations/versions/: 120b77d95bde_init.py  24993e230206_init.py  2e89c22f6131_add_cn.py  4b7c7220c4a0_add_user.py  7b38bf7d3a1a_init.py  873e374534ca_add_owner_and_developer.py  HEAD
usecase/templates/: index.html  login.html
usecase/templates/admin/model/: layout.html  list.html  statistics.html  update.html  upload.html
usecase/utils/: logsetting.py  settings.py  util.py
web/: showcase.html  showcasedemo.html
