[metadata]
name = usecase 
summary = API's and implementations to support Application Level deployment.
description-file = README.md
author = Huawei
author-email = xiaodongwang991481@gmail.com
home-page = http://
classifier =
    Environment :: ETA
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    usecase

[entry_points]
console_scripts =
    usecase-manage = usecase.bin.manage:main
    usecase-db-manage = usecase.db.migration.cli:main
    usecase-server = usecase.bin.server:main

wsgi_scripts =
    usecase-wsgi = usecase.bin.wsgi:initialize_application

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orca/locale
domain = orca

[update_catalog]
domain = asset
output_dir = usecase/locale
input_file = usecase/locale/usecase.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = usecase/locale/usecase.pot
